feat: Implement listing photo reordering, dedicated listing pages, and Docker deployment setup.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RoomieCircle - Find Rooms & Roommates | India's Trusted Community</title>
-    <meta name="description" content="Find compatible roommates and safe, affordable rooms across India. Verified profiles, zero brokerage, smart lifestyle matching for students and professionals." />
-    <meta name="author" content="RoomieCircle" />
-
-    <meta property="og:title" content="RoomieCircle - Find Your Perfect Room & Roommate" />
-    <meta property="og:description" content="India's most trusted community for finding rooms and roommates. Connect with verified students and professionals." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>RoomieCircle - Find Rooms & Roommates</title>
+    <meta name="description" content="Find compatible roommates and safe, affordable rooms across India." />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet" />
